--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
